Fixed weird issue with Mac Chrome not liking classes named "input"

--- a/web/resources/css/global.css
+++ b/web/resources/css/global.css
@@ -94,7 +94,7 @@ html, body {
     border-bottom: 1px #cdcdcd dotted;
 }
 
-.input {
+.input-control {
     margin: 0 0 10px 0;
     font-family: 'Franklin Gothic Book';
     font-size: 15px;
