--- a/web/template/headerTemplate.xhtml
+++ b/web/template/headerTemplate.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <body>
         <ui:composition>
-            <a style="border: none" href="#"><img id="ss-logo" src="resources/images/logo.png" alt="StreetSmart Logo"/></a>
+            <a style="border: none" href="index.xhtml"><img id="ss-logo" src="resources/images/logo.png" alt="StreetSmart Logo"/></a>
             <img id="ss-name" src="resources/images/streetsmart.png" alt="StreetSmart"/>
             <div id="header-buttons">
                 <a class="header-btn" href="SignIn.xhtml">Sign In</a>
