SS-28 Enter username layout done

--- a/web/resources/css/global.css
+++ b/web/resources/css/global.css
@@ -109,7 +109,7 @@ html, body {
     color: #ffffff;
     padding: 10px;
     background-color: #e35353;
-    border: 1px #c83434 solid;
+    border: none;
     border-radius: 3px;
 }
 
