--- a/web/resources/css/global.css
+++ b/web/resources/css/global.css
@@ -6,7 +6,7 @@
 html, body {
     margin: 0;
     font-family: "Franklin Gothic Book";
-    background-color: #f8f8f8;
+    background-color: #f0f0f0;
 }
 
 #header-wrapper {
@@ -111,6 +111,7 @@ html, body {
     background-color: #e35353;
     border: none;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .error-message {
