SS-48 Added password strength indicator for create account

--- a/web/resources/css/createAccount.css
+++ b/web/resources/css/createAccount.css
@@ -83,3 +83,13 @@
 .ui-messages-fatal {
     width: 440px;
 }
+
+.ui-state-hover,
+.ui-state-focus {
+    font-weight: normal !important;
+    background-color: #ffffff !important;
+}
+
+#password_panel-wrapper {
+    display: none;
+}
