--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -1,6 +1,6 @@
 #map {
     width: 100%;
-    min-width: 600px;
+    min-width: 650px;
     min-height: 100px;
     margin: 0;
     position: absolute;
@@ -8,7 +8,7 @@
 
 #map-loading {
     width: 100%;
-    min-width: 600px;
+    min-width: 650px;
     min-height: 100px;
     margin: 0;
     position: absolute;
@@ -102,6 +102,7 @@
     margin-left: 10px;
     width: 167px;
     padding: 5px;
+    height: 32px;
 }
 
 #map-menu-distance-filter {
@@ -190,7 +191,7 @@
     z-index: 3;
 }
 
-.add-pin-button-hover {
+.add-pin-button:hover {
     background: url(../images/add-pin-hover.png) no-repeat bottom right;
     background-size: 100%;
 }
