--- a/web/resources/css/myAccount.css
+++ b/web/resources/css/myAccount.css
@@ -11,3 +11,24 @@
     background-color: #79aceb;
     margin: 0 0 10px 10px;
 }
+
+#edit-account-form\:save-btn {
+    float: none;
+    font-family: "Franklin Gothic Book" !important;
+    background-color: #79aceb;
+    margin: 0 0 10px 10px;
+}
+
+#edit-account-form\:cancel-btn {
+    float: none;
+    font-family: "Franklin Gothic Book" !important;
+    background-color: #79aceb;
+    margin: 0 0 10px 10px;
+}
+
+#edit-account-form\:delete-btn {
+    float: none;
+    font-family: "Franklin Gothic Book" !important;
+    background-color: #79aceb;
+    margin: 0 0 10px 10px;
+}
