SS-54 Fixed styles on password field in create account

--- a/web/resources/css/createAccount.css
+++ b/web/resources/css/createAccount.css
@@ -87,9 +87,9 @@
 .ui-state-hover,
 .ui-state-focus {
     font-weight: normal !important;
-    background-color: #ffffff !important;
 }
 
 #password_panel-wrapper {
     display: none;
+    margin-left: -10px;
 }
