--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -138,7 +138,7 @@
     width: 100px;
 }
 
-#map-menu-pin-message {
+#map-menu-pin-title {
     margin-top: 16px;
     padding: 5px;
     font-size: 16px;
