--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -115,7 +115,7 @@
     padding: 5px;
 }
 
-#map-menu-pin {
+#map-menu-full-pin {
     display: none;
     position: absolute;
     left: 0px;
@@ -126,19 +126,19 @@
     z-index: 4;
 }
 
-#map-menu-pin-close {
+#full-pin-close {
     width: 20px;
     float: right;
     opacity: 0.7;
     cursor: pointer;
 }
 
-#map-menu-pin-pic {
+#full-pin-pic {
     margin: 50px 0 0 75px;
     width: 100px;
 }
 
-#map-menu-pin-message {
+#full-pin-message {
     margin-top: 16px;
     padding: 5px;
     font-size: 16px;
