--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -177,7 +177,7 @@
    --------------------- */
 
 #map-menu-full-pin {
-    /*display: none;*/
+    display: none;
     position: absolute;
     left: 0px;
     top: 0px;
