--- a/web/resources/css/myAccount.css
+++ b/web/resources/css/myAccount.css
@@ -1,34 +1,77 @@
-#my-account-form\:delete-btn {
-    float: none;
-    font-family: "Franklin Gothic Book" !important;
-    background-color: #79aceb;
-    margin: 0 0 10px 10px;
+#account-details-wrapper {
+    width: 600px;
+    margin: 0 auto;
+    margin-top: 60px;
 }
 
-#my-account-form\:edit-btn {
-    float: none;
-    font-family: "Franklin Gothic Book" !important;
-    background-color: #79aceb;
-    margin: 0 0 10px 10px;
+#page-title {
+    font-size: 24px;
+    color: #555555;
+    margin-bottom: 20px;
 }
 
-#edit-account-form\:save-btn {
-    float: none;
-    font-family: "Franklin Gothic Book" !important;
-    background-color: #79aceb;
-    margin: 0 0 10px 10px;
+#account-details-table {
+    float: left;
+    margin-right: 20px;
+    color: #333;
+    font-size: 18px;
 }
 
-#edit-account-form\:cancel-btn {
-    float: none;
-    font-family: "Franklin Gothic Book" !important;
-    background-color: #79aceb;
-    margin: 0 0 10px 10px;
+#account-details-table td.label {
+    width: 140px;
+    vertical-align: middle;
+    font-size: 16px;
 }
 
-#edit-account-form\:delete-btn {
-    float: none;
-    font-family: "Franklin Gothic Book" !important;
-    background-color: #79aceb;
-    margin: 0 0 10px 10px;
+#account-details-table td.value {
+    padding: 3px 0 3px 0;
+    vertical-align: middle;
+}
+
+#account-form\:edit-account-btn {
+    float: left;
+    clear: both;
+    margin: 15px 13px 0 0;
+    padding: 10px 20px 10px 20px;
+}
+
+#account-form\:delete-account-btn {
+    float: left;
+    margin: 15px 0 0 0;
+    padding: 10px 20px 10px 20px;
+}
+
+#account-form\:edit-account-save-btn {
+    float: left;
+    clear: both;
+    margin: 15px 13px 0 0;
+    padding: 8px 20px 8px 20px;
+}
+
+#account-form\:edit-account-cancel-btn {
+    float: left;
+    margin: 15px 0 0 0;
+    padding: 10px 20px 10px 20px;
+    background-color: #999999;
+}
+
+.error-message {
+    width: 328px;
+}
+
+.ui-messages-info, 
+.ui-messages-warn, 
+.ui-messages-error, 
+.ui-messages-fatal {
+    width: 328px;
+}
+
+.input-control {
+    margin: 2px 0 2px 0;
+    width: 180px;
+}
+
+.ui-button-text,
+.ui-c {
+    padding: 0 !important;
 }
