--- a/web/template/footerTemplate.xhtml
+++ b/web/template/footerTemplate.xhtml
@@ -13,7 +13,7 @@
                 <a href="#"><img src="resources/images/youtube-icon.png" alt="Youtube"/></a>
             </div>
             <div id="footer-text">
-                StreetSmart&nbsp;&copy;&nbsp;2016&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="mailto:feedback@betteru.com">Feedback</a>
+                StreetSmart&nbsp;&copy;&nbsp;2016&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="mailto:feedback@streetsmart.com">Feedback</a>
             </div>
         </ui:composition>
     </body>
