--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -131,10 +131,21 @@
     height: 34px;
 }
 
-.pins-list-pin-img {
+.pins-list-pin-img-wrapper {
+    height: 50px;
+    width: 50px;
+    margin: 8px 10px 0 0;
     float: right;
-    width: 55px;
-    margin: 5px 7px 0 0;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.pins-list-pin-img {
+    display: inline;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
 }
 
 .pins-list-pin-view {
