Fuck I left my testing stuff in here. Fixed.

--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -188,7 +188,7 @@
    --------------------- */
 
 #map-menu-full-pin {
-    /*display: none;*/
+    display: none;
     position: absolute;
     left: 0px;
     top: 0px;
