--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -179,6 +179,15 @@
     clear: both;
 }
 
+.pins-list-pin-distance-desc {
+    width: 175px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 14px;
+    margin-bottom: 5px;
+    padding-top: 20px;
+}
+
 /* ---------------
    END MENU REGION 
    --------------- */
