--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -66,8 +66,8 @@
     border-top: 1px solid #dddddd;
 }
 
-#map-menu-filter-keyword {
-    margin-top: 10px;
+#map-menu-filter-keyword-form\:map-menu-filter-keyword-input {
+    margin: 2px 0 25px 0;
     width: 238px;
     float: left;
     border-radius: 3px;
@@ -92,13 +92,15 @@
 #filterForm\:map-menu-distance-input {
     width: 50px;
     padding: 5px;
+    margin-bottom: 25px;
 }
 
 #map-menu-pins-list {
+    width: 260px;
     float: left;
     clear: both;
-    overflow-y: scroll;
-    margin-top: 20px;
+    overflow-y: auto;
+    margin-top: 5px;
 }
 
 .pins-list-pin-wrapper {
@@ -168,6 +170,12 @@
     color: #777777;
 }
 
+.pins-list-pin-distance-desc {
+    float: left;
+    font-size: 13px;
+    color: #777777;
+}
+
 .pins-list-pin-divider {
     display: block;
     width: 230px;
@@ -177,15 +185,6 @@
     border-top: 1px solid #cccccc;
     float: left;
     clear: both;
-}
-
-.pins-list-pin-distance-desc {
-    width: 175px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 14px;
-    margin-bottom: 5px;
-    padding-top: 20px;
 }
 
 /* ---------------
