--- a/web/resources/css/index.css
+++ b/web/resources/css/index.css
@@ -118,6 +118,7 @@
 
 .pins-list-pin-title {
     width: 165px;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 18px;
@@ -204,6 +205,10 @@
     padding: 20px;
     background-color: #f8f8f8;
     z-index: 4;
+}
+
+#render-full-pin {
+    overflow: hidden;
 }
 
 #full-pin-close {
@@ -302,7 +307,7 @@
     width: 260px;
     float: left;
     clear: both;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #comment\:full-pin-post-comment {
@@ -512,7 +517,6 @@
 .pin-wrapper {
     position: absolute;
     height: 50px;
-    width: 280px;
 }
 
 .pin-pic-wrapper {
@@ -539,13 +543,13 @@
     display: none;
     height: 27px;
     width: auto;
-    max-width: 200px;
+    max-width: 170px;
     font-size: 14px;
     padding: 9px 8px 0 8px;
     margin-top: 4px;
+    float: left;
     background-color: white;
     border-radius: 3px;
-    float: left;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     white-space: nowrap;
     overflow: hidden;
