--- a/web/resources/css/myAccount.css
+++ b/web/resources/css/myAccount.css
@@ -1,3 +1,8 @@
+/*
+ * Created by Jared Schwalbe on 2016.04.06  * 
+ * Copyright © 2016 Jared Schwalbe. All rights reserved. * 
+ */
+
 /* ----------------------------
    START ACCOUNT DETAILS REGION 
    ---------------------------- */
