--- a/web/resources/css/securityQuestion.css
+++ b/web/resources/css/securityQuestion.css
@@ -1,3 +1,8 @@
+/*
+ * Created by Jared Schwalbe on 2016.04.08  * 
+ * Copyright © 2016 Jared Schwalbe. All rights reserved. * 
+ */
+
 #security-question-wrapper {
     width: 240px;
     margin: 0 auto;
