--- a/web/resources/css/welcome.css
+++ b/web/resources/css/welcome.css
@@ -1,3 +1,8 @@
+/*
+ * Created by Jared Schwalbe on 2016.04.20  * 
+ * Copyright © 2016 Jared Schwalbe. All rights reserved. * 
+ */
+
 #welcome-map {
     width: 100%;
     min-width: 650px;
