--- a/web/resources/css/global.css
+++ b/web/resources/css/global.css
@@ -180,3 +180,31 @@ html, body {
     padding: 1px;
     font-weight: normal;
 }
+
+/* Turn on custom 8px wide scrollbar */
+#map-menu-pins-list::-webkit-scrollbar,
+#full-pin-comments-list::-webkit-scrollbar {
+  width: 8px; /* 1px wider than Lion. */
+  /* This is more usable for users trying to click it. */
+  background-color: rgba(0,0,0,0);
+  -webkit-border-radius: 100px;
+}
+/* hover effect for both scrollbar area, and scrollbar 'thumb' */
+#map-menu-pins-list::-webkit-scrollbar:hover,
+#full-pin-comments-list::-webkit-scrollbar:hover {
+  background-color: rgba(0, 0, 0, 0.09);
+}
+
+/* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
+#map-menu-pins-list::-webkit-scrollbar-thumb:vertical,
+#full-pin-comments-list::-webkit-scrollbar-thumb:vertical {
+  /* This is the EXACT color of Mac OS scrollbars. 
+     Yes, I pulled out digital color meter */
+  background: rgba(0,0,0,0.3);
+  -webkit-border-radius: 100px;
+}
+#map-menu-pins-list::-webkit-scrollbar-thumb:vertical:active,
+#full-pin-comments-list::-webkit-scrollbar-thumb:vertical:active {
+  background: rgba(0,0,0,0.41); /* Some darker color when you click it */
+  -webkit-border-radius: 100px;
+}
